# MediaLive

./: .gitignore  CMakeLists.txt  README.md
CGLive/: AppDelegate.h  AppDelegate.m  CGLiveController.h  CGLiveController.m  Info.plist  main.m
CGLive.xcodeproj/: project.pbxproj
CGLive/LivePlayer/: LivePlayer.hpp
CGLive/LivePush/: LivePush.cpp  LivePush.hpp
CGLive/RTMPEngine/Capture/: CCSystemCapture.m
CGLive/RTMPEngine/Codec/: AVCodecNote.md  CCAVConfig.h
CGLive/RTMPEngine/Controller/: AVVideoDecoderFF.cpp  AVVideoDemuxer.cpp  AVVideoDemuxer.h  MogicDefines.h  PullRTMP.h  PullRTMP.mm  RTMP.storyboard  RTMPDumpController.h  RTMPDumpController.m  RTMPPush.cpp  RTMPPush.h  RTMPPushLive.h  RTMPViewController.h  RTMPViewController.m  ReceiverViewController.m  StreamPushController.h  StreamPushController.m  StreamerViewController.h  StreamerViewController.m  output.flv
CGLive/RTMPEngine/Live/: LiveConsumerThread.cpp  LiveConsumerThread.h  LivePacketPool.cpp  LivePacketPool.h  LivePlatformCommon.h  (+8 more)
MediaLive/: Podfile
MediaLive/MediaLive/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
MediaLive/MediaLive.xcodeproj/: project.pbxproj
render/encoder-pusher/: CMakeLists.txt  README.md  list_streams.sh  push_stream.sh  start_stream.sh  stop_stream.sh
render/encoder-pusher/src/: main.cpp
render/encoder-pusher/src/app/: main.cpp
render/encoder-pusher/src/core/: task_manager.cpp
render/encoder-pusher/src/pipeline/: ffmpeg_utils.h  video_processor.h
render/media-server/: CMakeLists.txt  build.sh  run_server.sh
scripts/: dev_down.sh  dev_up.sh
src/encoder-pusher/: CMakeLists.txt  README.md  build.sh  start_stream.sh  stop_stream.sh  代码速读文档.md
src/encoder-pusher/src/core/: task_config.cpp  task_config.h  task_manager.h
src/encoder-pusher/src/pipeline/: audio_processor.cpp  audio_processor.h  ffmpeg_utils.cpp  frame_render_pusher.cpp  frame_render_pusher.h  frame_renderer.cpp  frame_renderer.h  input_initializer.cpp  input_initializer.h  output_initializer.cpp  output_initializer.h  pipeline_context.cpp  pipeline_context.h  video_processor.cpp
src/media-server/: CMakeLists.txt  bootstrap_zlm.sh  build.sh  run_server.sh
web/: index.html
(+68 files in other folders)
